--- a/package.json
+++ b/package.json
@@ -22,7 +22,12 @@
     "@angular/router": "~7.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "cors": "^2.8.4",
+    "express": "^4.16.4",
+    "favicon": "0.0.2",
+    "http": "0.0.0",
     "ngx-toastr": "^9.1.1",
+    "path": "^0.12.7",
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.3.3",
