--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "primeicons": "^1.0.0",
     "primeng": "^7.0.0-beta.1",
     "rxjs": "~6.3.3",
+    "serve-favicon": "^2.5.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
