--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node app.js",
-    "postinstall"	:"ng build --prod --aot",
+    "postinstall": "ng build --prod --aot",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "favicon": "0.0.2",
+    "font-awesome": "^4.7.0",
     "http": "0.0.0",
     "ngx-toastr": "^9.1.1",
     "path": "^0.12.7",
